[package]
name = "cantact"
version = "0.1.0"
authors = ["Eric Evenchick <eric@evenchick.com>"]
edition = "2018"
default-run="can"

[workspace]
members = ['driver']

[[bin]]
name = "can"
path = "src/main.rs"

[dependencies]
cantact-driver = {path = "driver"}
ctrlc = "3.1.4"
clap = { git = "https://github.com/clap-rs/clap/", features = ["yaml"]}
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"]}
app_dirs = "1.2.1"
log = "0.4.8"
simplelog = "0.8.0"