[package]
name = "cantact"
version = "0.0.5"
authors = ["Eric Evenchick <eric@evenchick.com>"]
license = "MIT"
keywords = ["can", "usb"]
categories = ["command-line-utilities", "hardware-support"]
repository = "https://github.com/linklayer/cantact"
homepage = "http://cantact.io/"
readme = "README.md"
description = "and CLI for CANtact Controller Area Network tools."

edition = "2018"
default-run="can"

[workspace]
members = ['driver']

[[bin]]
name = "can"
path = "src/main.rs"

[dependencies]
cantact-driver = {path = "driver", version = "0.0.5"}
ctrlc = "3.1.4"
clap = { version = "3.0.0-beta.1", features = ["yaml"]}
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"]}
app_dirs = "1.2.1"
log = "0.4.8"
simplelog = "0.8.0"
