[package]
name = "cantact"
version = "0.1.0"
authors = ["Eric Evenchick <eric@evenchick.com>"]
license = "MIT"
keywords = ["can", "usb"]
categories = ["command-line-utilities", "hardware-support"]
repository = "https://github.com/linklayer/cantact"
homepage = "http://cantact.io/"
readme = "README.md"
description = "and CLI for CANtact Controller Area Network tools."

edition = "2018"
default-run="can"

[workspace]
members = ['driver']

[[bin]]
name = "can"
path = "src/main.rs"

[dependencies]
cantact-driver = {path = "driver", version = "0.0.7"}
ctrlc = "3.1.4"
clap = { version = "2.33.3", features = ["yaml"]}
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"]}
directories = "3.0.1"
log = "0.4.8"
simplelog = "0.10.0"
