[package]
name = "cantact-driver"
version = "0.1.0"
authors = ["Eric Evenchick <eric@evenchick.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "cantact"
crate-type = ["dylib", "rlib"]

[features]
python = ["cpython"]

[dependencies]
libusb1-sys = {version = "0.3" }
cpython = { version = "0.5.0", features = ["extension-module"], optional = true }
libc = "0.2.71"
crossbeam-channel = "0.4"
serde = { version = "1.0", features = ["derive"]}